// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/api/deliveredProcedures DELETE / /:deliveredProcedureId - delete a delivered procedure Id then undelete it with batch 1`] = `
Object {
  "entities": Object {
    "deliveredProcedures": Object {
      "12518e11-b9d2-4d74-9887-29eaae7b5938": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "discountAmount": null,
        "entryDate": "2017-07-19T00:14:30.932Z",
        "id": "12518e11-b9d2-4d74-9887-29eaae7b5938",
        "isCompleted": true,
        "patientAmount": null,
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "pmsId": "2",
        "primaryInsuranceAmount": null,
        "procedureCode": "11111",
        "procedureCodeId": "CDA-11111",
        "secondaryInsuranceAmount": null,
        "totalAmount": 200.01,
        "units": 1,
      },
    },
  },
  "result": Array [
    "12518e11-b9d2-4d74-9887-29eaae7b5938",
  ],
}
`;

exports[`/api/deliveredProcedures DELETE / /:deliveredProcedureId - delete a deliveredProcedure 1`] = `
Object {
  "entities": Object {},
}
`;

exports[`/api/deliveredProcedures POST / / - create a deliverProcedure 1`] = `
Object {
  "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
  "discountAmount": null,
  "entryDate": "2017-07-19T00:14:30.932Z",
  "isCompleted": true,
  "patientAmount": null,
  "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
  "pmsId": null,
  "primaryInsuranceAmount": null,
  "procedureCode": "11111",
  "procedureCodeId": "CDA-11111",
  "secondaryInsuranceAmount": null,
  "totalAmount": null,
  "units": null,
}
`;
